# ClosedLoopExperimentAgent

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
app/: __init__.py  main.py
app/analysis/: __init__.py  failure_parser.py  heuristic_analyzer.py  metric_parser.py  supervisor.py
app/config/: __init__.py  system.yaml
app/evaluation/: __init__.py  evaluator.py  schemas.py
app/graph/: __init__.py  build_graph.py  edges.py  nodes.py  state.py
app/guards/: __init__.py  constraints.py  repair_rules.py  validators.py
app/optimizer/: __init__.py  optuna_engine.py  search_space.py
app/runner/: __init__.py  base.py  local_runner.py
app/runtime/: __init__.py  background.py  watchdog.py
app/study/: __init__.py  executor.py
app/tracking/: __init__.py  mlflow_client.py  schemas.py
closed_loop_experiment_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/evaluation/: toy_suite.yaml
examples/qwen3_asr/: README.md  baseline.yaml  search_space.yaml  train.py
examples/toy_pytorch/: baseline.yaml  search_space.yaml  train.py
tests/: test_evaluation.py  test_guards.py  test_repair_rules.py  test_runner.py  test_supervisor.py  test_watchdog.py
